kube/order-service/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: azure-application-gateway
  tls:
  - hosts:
    - ecom-store-vd.duckdns.org
    secretName: ecommerce-tls-secret
  rules:
  - host: ecom-store-vd.duckdns.org
  - http:
      paths:
      - path: /order
        pathType: Prefix
        backend:
          service:
            name: order-api-service
            port:
              number: 80
